--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "opencp-compile",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Compile and run programs of various programming languages.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
